<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:orderInCategory="99"
        app:showAsAction="never">

    </item>

    <item
        android:id="@+id/add_link"
        android:title="@string/add_link"
        android:orderInCategory="10"
        android:icon="@drawable/ic_insert_link_white_24dp"
        app:showAsAction="ifRoom">

    </item>

    <item
        android:id="@+id/sign_out"
        android:title="@string/sign_out"
        android:orderInCategory="50"
        app:showAsAction="never">

    </item>


    <item
        android:id="@+id/date_range"
        android:title="Date Range"
        android:icon="@drawable/ic_date_range_white_24dp"
        android:orderInCategory="20"
        app:showAsAction="ifRoom">

    </item>



</menu>