<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/date_range_layout">

    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:textSize="30sp"
                android:gravity="center_horizontal"/>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">


                <RadioButton
                    android:id="@+id/rbToday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/today"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/rbWeek"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/past_week"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/rbMonth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/past_month"
                    android:textSize="18sp"/>
                <RadioButton
                    android:id="@+id/rbAll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:textSize="18sp"/>

            </RadioGroup>


        </LinearLayout>








    </androidx.cardview.widget.CardView>



</LinearLayout>