<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/empty_list_dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="380dp"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:text="@string/your_list_is_empty"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">


                <TextView
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/empty_stash_list_note"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/shareicon"
                        android:src="@drawable/ic_share_black_24dp"
                        tools:ignore="NestedWeights" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/black" />


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/link_image"
                        android:src="@drawable/ic_insert_link_black_24dp" />

                </LinearLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/closeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="close"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>