<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Help">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:src="@mipmap/ic_launcher_round" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty_stash_list_note"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <View
                android:layout_width="250dp"
                android:layout_height="3dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/help_delete_stash_text"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <View
                android:layout_width="250dp"
                android:layout_height="3dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:background="@color/colorPrimary" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/help_share_stashed_link"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <View
                android:layout_width="250dp"
                android:layout_height="3dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/help_non_working_links"
                android:textColor="@android:color/black"
                android:textSize="18sp" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>